# model_zoo

./: README.md  requirements.txt  setup.cfg
src/model_zoo/: __init__.py  huggingface_model.py  language_model.py  litellm_model.py  openai_model.py  vllm_model.py
