[metadata]
name = model_zoo
version = 0.1.0
author = 3rdn4
author_email = lihongweiandre@gmail.com
description = A library for language model inference
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    aiolimiter==1.2.1
    auto_mix_prep==0.2.0
    litellm==1.60.8
    torch
    tqdm==4.66.6
    transformers
    vllm==0.7.3

[options.packages.find]
where = src
